experimental/ir/testdata/options/values/bool.proto.stderr.txt
error: nested array expressions are not allowed
  --> testdata/options/values/bool.proto:37:31
   |
37 |     x: [1, 1.0, inf, nan, {}, [], 0 to 1]
   |        -----------------------^^--------- ...within this array expression
   |                               |
   |                               cannot nest this array expression...

error: unexpected range expression in option setting value
  --> testdata/options/values/bool.proto:37:35
   |
37 |     x: [1, 1.0, inf, nan, {}, [], 0 to 1]
   |                                   ^^^^^^

warning: non-canonical `bool` literal
  --> testdata/options/values/bool.proto:25:8
   |
25 |     x: True
   |        ^^^^
  help: replace with `true`
   |
25 | -     x: True
25 | +     x: true
   |
   = note: within message expressions only, `True` is permitted as a `bool`, but
           should be avoided

warning: non-canonical `bool` literal
  --> testdata/options/values/bool.proto:26:8
   |
26 |     x: False
   |        ^^^^^
  help: replace with `false`
   |
26 | -     x: False
26 | +     x: false
   |
   = note: within message expressions only, `False` is permitted as a `bool`,
           but should be avoided

warning: non-canonical `bool` literal
  --> testdata/options/values/bool.proto:27:8
   |
27 |     x: t
   |        ^
  help: replace with `true`
   |
27 | -     x: t
27 | +     x: true
   |
   = note: within message expressions only, `t` is permitted as a `bool`, but
           should be avoided

warning: non-canonical `bool` literal
  --> testdata/options/values/bool.proto:28:8
   |
28 |     x: f
   |        ^
  help: replace with `false`
   |
28 | -     x: f
28 | +     x: false
   |
   = note: within message expressions only, `f` is permitted as a `bool`, but
           should be avoided

error: cannot find `TRUE` in this scope
  --> testdata/options/values/bool.proto:31:8
   |
31 |     x: TRUE
   |        ^^^^ not found in this scope
   = help: the full name of this scope is `buf.test`

error: cannot find `FALSE` in this scope
  --> testdata/options/values/bool.proto:32:8
   |
32 |     x: FALSE
   |        ^^^^^ not found in this scope
   = help: the full name of this scope is `buf.test`

error: cannot find `T` in this scope
  --> testdata/options/values/bool.proto:33:8
   |
33 |     x: T
   |        ^ not found in this scope
   = help: the full name of this scope is `buf.test`

error: cannot find `F` in this scope
  --> testdata/options/values/bool.proto:34:8
   |
34 |     x: F
   |        ^ not found in this scope
   = help: the full name of this scope is `buf.test`

error: mismatched types
  --> testdata/options/values/bool.proto:37:9
   |
37 |     x: [1, 1.0, inf, nan, {}, [], 0 to 1]
   |         ^ expected `bool`, found integer literal
...
49 |     repeated bool x = 1;
   |     ------------- expected due to this
   = note: expected: scalar type `bool`
              found: integer literal

error: mismatched types
  --> testdata/options/values/bool.proto:37:12
   |
37 |     x: [1, 1.0, inf, nan, {}, [], 0 to 1]
   |            ^^^ expected `bool`, found floating-point literal
...
49 |     repeated bool x = 1;
   |     ------------- expected due to this
   = note: expected: scalar type `bool`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/bool.proto:37:17
   |
37 |     x: [1, 1.0, inf, nan, {}, [], 0 to 1]
   |                 ^^^ expected `bool`, found floating-point literal
...
49 |     repeated bool x = 1;
   |     ------------- expected due to this
   = note: expected: scalar type `bool`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/bool.proto:37:22
   |
37 |     x: [1, 1.0, inf, nan, {}, [], 0 to 1]
   |                      ^^^ expected `bool`, found floating-point literal
...
49 |     repeated bool x = 1;
   |     ------------- expected due to this
   = note: expected: scalar type `bool`
              found: floating-point literal

error: mismatched types
  --> testdata/options/values/bool.proto:37:27
   |
37 |     x: [1, 1.0, inf, nan, {}, [], 0 to 1]
   |                           ^^ expected `bool`, found message expression
...
49 |     repeated bool x = 1;
   |     ------------- expected due to this
   = note: expected: scalar type `bool`
              found: message expression

error: non-canonical `bool` literal outside of message expression
  --> testdata/options/values/bool.proto:43:14
   |
43 | option (y) = True;
   |              ^^^^
  help: replace with `true`
   |
43 | - option (y) = True;
43 | + option (y) = true;
   |
   = note: within message expressions only, `True` is permitted as a `bool`, but
           should be avoided

error: non-canonical `bool` literal outside of message expression
  --> testdata/options/values/bool.proto:44:14
   |
44 | option (y) = False;
   |              ^^^^^
  help: replace with `false`
   |
44 | - option (y) = False;
44 | + option (y) = false;
   |
   = note: within message expressions only, `False` is permitted as a `bool`,
           but should be avoided

error: non-canonical `bool` literal outside of message expression
  --> testdata/options/values/bool.proto:45:14
   |
45 | option (y) = t;
   |              ^
  help: replace with `true`
   |
45 | - option (y) = t;
45 | + option (y) = true;
   |
   = note: within message expressions only, `t` is permitted as a `bool`, but
           should be avoided

error: non-canonical `bool` literal outside of message expression
  --> testdata/options/values/bool.proto:46:14
   |
46 | option (y) = f;
   |              ^
  help: replace with `false`
   |
46 | - option (y) = f;
46 | + option (y) = false;
   |
   = note: within message expressions only, `f` is permitted as a `bool`, but
           should be avoided

encountered 15 errors and 4 warnings
